--- a/index.html
+++ b/index.html
@@ -1,5 +1,37 @@
 ---
 layout: default
-title: Home
+title: Jacob Waugh - Home
 ---
-<h1>{{ "Hello World!" | downcase }}</h1>
+<style>
+  .linkBlock {
+    text-align: center;
+    padding: 24px;
+  }
+
+  .linkBtn {
+    text-decoration: none;
+    outline: solid rgba(221, 215, 228, 0.721);
+    border-radius: 10px;
+    padding: 10px;
+    background-color: rgba(141, 99, 180, 0.133);
+    color: rgb(104, 73, 144);
+    font-size: 36px;
+    font-size: 36px;
+  }
+</style>
+
+<div class="linkBlock">
+  <h2><a href="about.html" class="linkBtn">About Me</a></h2>
+</div>
+<h1 class="test">{{ "Hello World!" | downcase }}</h1>
+
+<!--
+{% for model in site.models %}
+  <h2>
+    <a href="{{ model.url }}">
+      {{ model.name }} 
+    </a>
+    ({{ model.tags }})
+  </h2>
+{% endfor %}
+-->
