--- a/index.html
+++ b/index.html
@@ -13,25 +13,67 @@ title: Jacob Waugh - Home
     outline: solid rgba(221, 215, 228, 0.721);
     border-radius: 10px;
     padding: 10px;
-    background-color: rgba(141, 99, 180, 0.133);
-    color: rgb(104, 73, 144);
-    font-size: 36px;
-    font-size: 36px;
+    background-color: rgba(141, 99, 180, 0.37);
+    color: rgb(191, 174, 214);
+    font-size: 26px;
+  }
+
+  ul {
+    color: white;
+    list-style-type: square;
+    padding: 0;
+    margin: 0;
+  }
+
+  .pages {
+    background-color: rgb(156, 156, 181);
+    overflow: hidden;
+    padding: 0 50px;
+    max-width: 950px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+
+  }
+
+  .pageCatagory {
+    display: inline-block;
+    width: 23%;
+    padding: 12px 0;
+    margin: 1em;
+    text-align: left;
+  }
+
+  .pageLink {
+    text-decoration: none;
+    color: whitesmoke;
+    font-size: 20px;
+    transition: 0.2s;
+    padding: 6px;
+    border-radius: 5px;
+  }
+
+  .pageLink:hover {
+    background-color: rgb(40, 40, 66);
   }
 </style>
 
 <div class="linkBlock">
   <h2><a href="about.html" class="linkBtn">About Me</a></h2>
 </div>
-<h1 class="test">{{ "Hello World!" | downcase }}</h1>
 
-<!--
-{% for model in site.models %}
-  <h2>
-    <a href="{{ model.url }}">
-      {{ model.name }} 
-    </a>
-    ({{ model.tags }})
-  </h2>
-{% endfor %}
--->
+<div class="pages">
+  <div class="pageCatagory">
+    <h2><em>Games</em></h2>
+    <ul>
+      <li><a href="/about.html" class="pageLink">Edge Case</a></li>
+    </ul>
+  </div>
+
+  <div class="pageCatagory">
+    <h2><em>3D Models</em></h2>
+    <ul>
+      <li><a href="/models/crate" class="pageLink">Photorealistic Crate</a></li>
+    </ul>
+  </div>
+</div>
