--- a/index.html
+++ b/index.html
@@ -76,22 +76,22 @@ title: Jacob Waugh - Home
   <div class="pageCatagory">
     <h2><em>Games</em></h2>
     <ul>
-      <li><a href="/games/EdgeCase" class="pageLink">Edge Case</a></li>
+      <li><a href="{{ site.baseurl }}/games/EdgeCase" class="pageLink">Edge Case</a></li>
     </ul>
   </div>
 
   <div class="pageCatagory">
     <h2><em>3D Models</em></h2>
     <ul>
-      <li><a href="/models/crate" class="pageLink">Photorealistic Crate</a></li>
+      <li><a href="{{ site.baseurl }}/models/crate" class="pageLink">Photorealistic Crate</a></li>
     </ul>
   </div>
 
   <div class="pageCatagory">
     <h2><em>Animations</em></h2>
     <ul>
-      <li><a href="/" class="pageLink">"Not-so-still life"</a></li>
-      <li><a href="/" class="pageLink">Rooftop Parkour</a></li>
+      <li><a href="{{ site.baseurl }}/" class="pageLink">"Not-so-still life"</a></li>
+      <li><a href="{{ site.baseurl }}/" class="pageLink">Rooftop Parkour</a></li>
     </ul>
 
   </div>
