Added edgecase screenshot files

--- a/_games/EdgeCase.html
+++ b/_games/EdgeCase.html
@@ -4,4 +4,13 @@ name: Edge Case
 title: Jacob Waugh - Edge Case
 tags: game
 ---
-<h1>Edge Case page</h1>
+<style>
+    .bodyOffset{
+        display: inline-block;
+        margin-left: 80px;
+    }
+</style>
+
+<div class="bodyOffset">
+    <h1>Edge Case page</h1>
+</div>
