small edge case updates

--- a/_games/EdgeCase.html
+++ b/_games/EdgeCase.html
@@ -87,13 +87,13 @@ tags: game
       <hr>
       <p style="padding: 0 14px;"><i>Search for your lost sibling by exploring an abandoned game studio. Switch between the real world and the game world as you play the studios unfinished game for hints to progress.</i></p>
       <hr>
-      <p>It was made with a group for the capstone assignment at Wake Tech, an 8 week game jame. The theme for that year was "Abandonware".</p>
+      <p>It was made and presented with a group for the capstone assignment at Wake Tech, an 8 week game jame. The theme for that year was "Abandonware".</p>
       <p>My group and I did a lot on this project. While initially joining the group as an artist, I have experience programming and ended up doing a lot of scripting work as well.</p>
-      <p>My contributions include:</p>
+      <p>My main contributions include:</p>
         <ul>
-          <li>Helping plan the intended path through the office and Genesis (the in-game VR game)</li>
+          <li>Helping plan the intended path through the office and Genesis (the in-game VR world)</li>
           <li>Planning, whiteboxing, and level scripting for Genesis</li>
-          <li>Modeling, rigging, and animating the player arms</li>
+          <li>Modeling, rigging, animating, and scripting for the player arms</li>
           <li>Interactable highlight shader and scripts</li>
           <li>Objective UI popup and scripts</li>
           <li>Office and Genesis note systems</li>
