update crate page, small update edgecase

--- a/_games/EdgeCase.html
+++ b/_games/EdgeCase.html
@@ -55,6 +55,7 @@ tags: game
   .photoBar iframe{
     display: block;
     width: 100%;
+    height: 252px;
   }
 
   .description{
@@ -102,7 +103,7 @@ tags: game
       <p>This project taught me a lot, and gave me a lot of experience working with a team on a game from start to finish. </p>
     </div>
     <div class="photoBar">
-      <iframe height="252" src="https://www.youtube.com/embed/6kiCKehnJOA?si=x8VHSz7p4qM4CpkP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/6kiCKehnJOA?si=x8VHSz7p4qM4CpkP" title="YouTube video player" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <img src="{{ site.baseurl }}/assets/images/edgecase/EdgeCase_Parking.png">
       <img src="{{ site.baseurl }}/assets/images/edgecase/EdgeCase_Lab.png">
     </div>
