Added two character animation page

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ title: Jacob Waugh - Home
   <div class="pageCatagory">
     <h2><em>Animations</em></h2>
     <ul>
-      <li><a href="{{ site.baseurl }}/" class="pageLink">"Not-so-still life"</a></li>
+      <li><a href="{{ site.baseurl }}/animations/forbiddenfruit" class="pageLink">"The Forbidden Fruit"</a></li>
       <li><a href="{{ site.baseurl }}/" class="pageLink">Rooftop Parkour</a></li>
     </ul>
 
