added park diorama page

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ title: Jacob Waugh - Home
     <h2><em>3D Models</em></h2>
     <ul>
       <li><a href="{{ site.baseurl }}/models/crate" class="pageLink">Photorealistic Crate</a></li>
+      <li><a href="{{ site.baseurl }}/models/park" class="pageLink">Double-sided Park</a></li>
     </ul>
   </div>
 
