added icon support, nav css updates
icons from https://fontawesome.com/
hid "to be added" section on index.html

--- a/index.html
+++ b/index.html
@@ -92,11 +92,10 @@ title: Jacob Waugh - Home
     <h2><em>Animations</em></h2>
     <ul>
       <li><a href="{{ site.baseurl }}/animations/forbiddenfruit" class="pageLink">"The Forbidden Fruit"</a></li>
-      <li><a href="{{ site.baseurl }}/" class="pageLink">Rooftop Parkour</a></li>
     </ul>
 
   </div>
-  <div class="pageCatagory" style="opacity: 65%;">
+  <div class="pageCatagory" style="opacity: 65%; visibility: hidden;">
     <h2><em>To Be Added...</em></h2>
     <ul>
     </ul>
