--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@ title: Jacob Waugh - Home
 
   .linkBtn {
     text-decoration: none;
-    outline: solid rgba(221, 215, 228, 0.721);
-    border-radius: 10px;
+    outline: 3px solid rgba(70, 90, 123, 0.925);
+    border-radius: 4px;
     padding: 10px;
-    background-color: rgba(141, 99, 180, 0.37);
-    color: rgb(191, 174, 214);
+    color: rgba(70, 90, 123, 0.925);
     font-size: 26px;
   }
 
@@ -35,7 +34,7 @@ title: Jacob Waugh - Home
   }
 
   .pages {
-    background-color: rgb(156, 156, 181);
+    background-color: rgb(165, 188, 208);
     overflow: hidden;
     padding: 0 25px;
     max-width: 950px;
@@ -50,13 +49,13 @@ title: Jacob Waugh - Home
     width: 20%;
     padding: 2px 8px 12px 15px;
     margin: 10px;
-    background-color: rgba(78, 78, 109, 0.332);
+    background-color: rgba(90, 90, 100, 0.35);
     border-radius: 10px;
   }
 
   .pageLink {
     text-decoration: none;
-    color: rgb(230, 230, 230);
+    color: rgb(240, 240, 240);
     font-size: 18px;
     transition: 0.2s;
     padding: 3px 5px;
