added style pages, updated colors

--- a/_animations/forbiddenfruit.html
+++ b/_animations/forbiddenfruit.html
@@ -6,10 +6,10 @@ tags: animation
 permalink: /animations/forbiddenfruit
 ---
 <style>
-  .border {
-    background-color: rgb(156, 156, 181);
+.border {
+    background-color: rgba(165, 188, 208, 0.7);
     border-radius: 5px;
-    margin: 40px;
+    margin: 10px 40px;
     justify-content: center;
     text-align: center;
     padding: 10px;
