--- a/_games/EdgeCase.html
+++ b/_games/EdgeCase.html
@@ -4,78 +4,7 @@ name: Edge Case
 title: Jacob Waugh - Edge Case
 tags: game
 ---
-<style>
-  .border {
-    background-color: rgb(156, 156, 181);
-    border-radius: 5px;
-    margin: 40px;
-    justify-content: center;
-  }
-
-  .logoContainer{
-    display: block;
-    justify-content: center;
-  }
-
-  .logo{
-    display: flex;
-    width: 25%;
-    margin: auto;
-  }
-
-  .download{
-    text-align: center;
-    margin: 6px;
-  }
-  
-  .content{
-    display: flex;
-    padding: 0 10px;
-  }
-
-  .photoBar{
-    border: 3px solid rgba(15, 100, 120, 0.85);
-    border-radius: 4px;
-    background-color: rgba(198, 198, 198, 0.4);
-    display: grid;
-    width: 40%;
-    margin: 5px;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .photoBar img{
-    width: 95%;
-    height: auto;
-    margin: auto;
-    padding: 10px 0;
-    display: block;
-  }
-
-  .photoBar iframe{
-    display: block;
-    width: 100%;
-    height: 252px;
-  }
-
-  .description{
-    margin: 4px;
-    width: 60%;
-    padding: 8px;
-  }
-
-  .description p{
-    padding-bottom: 4px;
-    padding-left: 8px;
-  }
-
-  hr{
-    border: none;
-    height: 1px;
-    background-color: #33333370;
-  }
-</style>
-
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/gameStyles.css">
 <div class="border">
   <div class="logoContainer">
     <img src="{{ site.baseurl }}/assets/images/edgecase/EdgeCaseLogo.png" alt="Edge Case Logo" class="logo">
