--- a/_games/EdgeCase.html
+++ b/_games/EdgeCase.html
@@ -18,18 +18,24 @@ tags: game
       <p style="padding: 0 14px;"><i>Search for your lost sibling by exploring an abandoned game studio. Switch between the real world and the game world as you play the studios unfinished game for hints to progress.</i></p>
       <hr>
       <p>It was made and presented with a group for the capstone assignment at Wake Tech, an 8 week game jame. The theme for that year was "Abandonware".</p>
-      <p>My group and I did a lot on this project. While initially joining the group as an artist, I have experience programming and ended up doing a lot of scripting work as well.</p>
-      <p>My main contributions include:</p>
+      <p>My group and I did a lot on this project. I had to wear many hats, working on design documentation, player modeling and animations, and designing and scripting gameplay, level, and UI/UX systems using Blueprint</p>
+      <p>A list of my main contributions:</p>
         <ul>
           <li>Helping plan the intended path through the office and Genesis (the in-game VR world)</li>
           <li>Planning, whiteboxing, and level scripting for Genesis</li>
-          <li>Modeling, rigging, animating, and scripting for the player arms</li>
-          <li>Interactable highlight shader and scripts</li>
-          <li>Objective UI popup and scripts</li>
+          <li>Modeling, rigging, animating, and scripting the player model</li>
+          <li>Interactable highlight system and visual</li>
+          <li>Objective UI popup system and visual</li>
           <li>Office and Genesis note systems</li>
           <li>Handwritten typeface for notes</li>
+          <li>Playtesting and bug write-ups</li>
         </ul>
       <p>This project taught me a lot, and gave me a lot of experience working with a team on a game from start to finish. </p>
+      <h3>Devlogs:</h3>
+      <ul>
+        <li><h4 class="devlog"><a href="https://smnthgn.itch.io/edge-case/devlog/972567/devlog-5-interaction-outline-and-prompt" target="_blank">Interaction Prompt</a></h4></li>
+        <li><h4 class="devlog"><a href="https://smnthgn.itch.io/edge-case/devlog/991324/devlog-11-updated-outline-shader" target="_blank">Outline Shader</a></h4></li>
+      </ul>
     </div>
     <div class="photoBar">
       <iframe src="https://www.youtube.com/embed/6kiCKehnJOA?si=x8VHSz7p4qM4CpkP" title="YouTube video player" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
